# SpaRk

./: .gitignore
spark-core/: Cargo.toml
spark-core/src/: database.rs  error.rs  lib.rs  main.rs  messages.rs  network.rs  server.rs  users.rs  websocket.rs
spark-core/tests/: chat-test-client.js
spark-desktop/: index.html  package-lock.json  package.json
spark-desktop/src/: App.css  App.jsx
spark-desktop/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
spark-desktop/src-tauri/src/: main.rs
spark-desktop/src/components/: Auth.css  Auth.jsx  Chat.css  Chat.jsx  LoginForm.jsx  MessageContent.css  MessageContent.jsx  MessageInput.jsx  RegisterForm.jsx  RoomMembers.css  RoomMembers.jsx
