[package]
name = "spark-core"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "spark-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1", features = ["v4"] }
rand = "0.8.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
argon2 = "0.5.3"
regex = "1.12.2"


