[package]
name = "spark-desktop"
version = "0.2.0"
description = "Desktop Client for SpaRk"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"

[[bin]]
name = "spark-desktop"
path = "src/main.rs"
windows_subsystem = "windows"
